--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<meta charset="UTF-8">
+	<title>Trello</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="trelloLogo.ico">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<meta charset="UTF-8">
-	<title>TRELLO</title>
 </head>
 <body>
-	<header>
-		<img src="trello-logo-black.svg" alt=>
+	<header class="container-fluid">
+		<img src="trello-logo-black.svg">
 	</header>
-	<section id="contListas">
-		<div id="contenedor">
-			<a href="#" id="botonInicio">
-				<span id="agregarLista">Añadir Lista ...</span>
-			</a>
+	<section  class="container" id="contListas">
+		<div class="wrapperList ">
+			<form>
+				<span class="placeholder">Añadir una lista...</span>
+			</form>
+			<form>
+				<input class="listName" type="text" name="name" placeholder="Añadir una lista..." autocomplete="off" dir="auto" maxlength="512">
+				<div class="listControls">
+					<input class="btnSave btn btn-success" type="submit" value="Guardar">
+					<a class="cancelar" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
+				</div>
+			</form>
 		</div>
 	</section>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://use.fontawesome.com/11e137e2d7.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script type='text/javascript' src='js/main.js'></script>
 </body>
 </html>
