css seccion newList

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<img src="trello-logo-black.svg">
 	</header>
 	<section  class="container" id="contListas">
-		<div class="wrapperList ">
+		<div class="wrapperList " id="wrapperList">
 			<form>
 				<span id="list" class="placeholder">Añadir una lista...</span>
 			</form>
