--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<form class="newList hidden" id="newList">
 				<input id="listName" class="listName" type="text" name="name" placeholder="Añadir una lista..." autocomplete="off" dir="auto" maxlength="512">
 				<div class="listControls">
-					<input class="btnSave btn btn-success" type="submit" value="Guardar">
+					<input class="btnSave btn btn-success" id="btnSave" type="submit" value="Guardar">
 					<a class="cancelar" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
 				</div>
 			</form>
